[package]
name = "depth"
version = "0.1.0"
authors = ["Drumato <drumatech109@gmail.com>"]
edition = "2018"
description = "The Depth Programming Language"

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
yaml-rust = "0.4.3"
colored = "1.8"
lazy_static = "1.3.0"
drumatech = "0.1.9"
byteorder = "1.3.2"
genelf = "0.2.0"
